First attempt.  Submitted to Udacity on May 1 2020

--- a/blogs/blog1.html
+++ b/blogs/blog1.html
@@ -2,40 +2,64 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta content="width=device-width, initial-scale=1, maximum-scale=1" name="viewport"/>
+    <meta content="width=device-width, initial-scale=1, maximum-scale=1"
+      name="viewport" />
     <title>
-        Blog 1
+      Blog 1
     </title>
     <link href="../css/style.css" rel="stylesheet">
   </head>
   <body>
-    <div class = "container">
+    <div class="container">
       <div class="header">
         <h1>
           Hiltz Kitty Blog
         </h1>
       </div>
       <div class="nav-container">
-          <a class="nav-content" href="../index.html">Home</a>
-          <a class="nav-content" href="../nav/about.html">Author Info</a>
-          <a class="nav-content" href="../nav/contact.html">Contact</a>
-          <a class="nav-content" href="blog2.html">Next</a>
+        <a class="nav-content" href="../index.html">Home</a>
+        <a class="nav-content" href="../nav/about.html">Author Info</a>
+        <a class="nav-content" href="../nav/contact.html">Contact</a>
+        <a class="nav-content" href="blog2.html">Next</a>
       </div>
       <div class="blog-grid">
-        <div class="blog-flex box" >
-          <img src="../images/Both1.jpg" alt="Daryl and Rumbles" class="blog-pic">
+        <div class="blog-flex box">
+          <img src="../images/Both1.jpg" alt="Daryl and Rumbles"
+            class="blog-pic">
           <h2 class="blog-text">
-            Rumbles and Daryl resting together and dreaming of catnip.  Such good buds.  Leave dead animals as gifts scratch leg; meow for can opener to feed me. 
-            Eat the rubberband jump launch to pounce upon little yarn mouse, bare fangs at toy run hide in litter box until treats are fed groom forever, stretch tongue 
-            and leave it slightly out, blep for fight own tail so lick plastic bags. Crash against wall but walk away like nothing happened licks your face and stare at 
-            ceiling light yet it's 3am, time to create some chaos but spit up on light gray carpet instead of adjacent linoleum. Meow and walk away let me in let me out 
-            let me in let me out let me in let me out who broke this door anyway fall over dead (not really but gets sypathy), scratch at door to be let outside, get let 
-            out then scratch at door immmediately after to be let back in. Love you, then bite you catching very fast laser pointer. Cough pet right here, no not there, 
-            here, no fool, right here that other cat smells funny you should really give me all the treats because i smell the best and omg you finally got the right spot 
-            and i love you right now mew cat ass trophy taco cat backwards spells taco cat eat a rug and furry furry hairs everywhere oh no human coming lie on counter 
-            don't get off counter but mesmerizing birds. I like big cats and i can not lie chase after silly colored fish toys around the house hack hide head under 
-            blanket so no one can see let me in let me out let me in let me out let me in let me out who broke this door anyway . Find box a little too small and curl up 
-            with fur hanging out . Cat milk copy park pee walk owner escape bored tired cage droppings sick vet vomit need to chase tail enslave the hooman and under the bed.
+            Rumbles and Daryl resting together and dreaming of catnip. Such good
+            buds. Leave dead animals as gifts scratch leg; meow for can opener
+            to feed me.
+            Eat the rubberband jump launch to pounce upon little yarn mouse,
+            bare fangs at toy run hide in litter box until treats are fed groom
+            forever, stretch tongue
+            and leave it slightly out, blep for fight own tail so lick plastic
+            bags. Crash against wall but walk away like nothing happened licks
+            your face and stare at
+            ceiling light yet it's 3am, time to create some chaos but spit up on
+            light gray carpet instead of adjacent linoleum. Meow and walk away
+            let me in let me out
+            let me in let me out let me in let me out who broke this door anyway
+            fall over dead (not really but gets sypathy), scratch at door to be
+            let outside, get let
+            out then scratch at door immmediately after to be let back in. Love
+            you, then bite you catching very fast laser pointer. Cough pet right
+            here, no not there,
+            here, no fool, right here that other cat smells funny you should
+            really give me all the treats because i smell the best and omg you
+            finally got the right spot
+            and i love you right now mew cat ass trophy taco cat backwards
+            spells taco cat eat a rug and furry furry hairs everywhere oh no
+            human coming lie on counter
+            don't get off counter but mesmerizing birds. I like big cats and i
+            can not lie chase after silly colored fish toys around the house
+            hack hide head under
+            blanket so no one can see let me in let me out let me in let me out
+            let me in let me out who broke this door anyway . Find box a little
+            too small and curl up
+            with fur hanging out . Cat milk copy park pee walk owner escape
+            bored tired cage droppings sick vet vomit need to chase tail enslave
+            the hooman and under the bed.
           </h2>
         </div>
       </div>
