--- a/blogs/blog2.html
+++ b/blogs/blog2.html
@@ -2,55 +2,81 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta content="width=device-width, initial-scale=1, maximum-scale=1" name="viewport"/>
+    <meta content="width=device-width, initial-scale=1, maximum-scale=1"
+      name="viewport" />
     <title>
-        Blog 2
+      Blog 2
     </title>
     <link href="../css/style.css" rel="stylesheet">
   </head>
   <body>
-    <div class = "container">
+    <div class="container">
       <div class="header">
         <h1>
           Hiltz Kitty Blog
         </h1>
       </div>
       <div class="nav-container">
-          <a class="nav-content" href="../index.html">Home</a>
-          <a class="nav-content" href="../nav/about.html">Author Info</a>
-          <a class="nav-content" href="../nav/contact.html">Contact</a>
-          <a class="nav-content" href="blog1.html">Previous</a>
-          <a class="nav-content" href="blog3.html">Next</a>
+        <a class="nav-content" href="../index.html">Home</a>
+        <a class="nav-content" href="../nav/about.html">Author Info</a>
+        <a class="nav-content" href="../nav/contact.html">Contact</a>
+        <a class="nav-content" href="blog1.html">Previous</a>
+        <a class="nav-content" href="blog3.html">Next</a>
       </div>
       <div class="blog-grid">
-        <div class="blog-flex box" >
+        <div class="blog-flex box">
           <img src="../images/Rumbles1.jpg" alt="Rumbles" class="blog-pic">
           <h2 class="blog-text">
-            Rumbles is so fierce.  Look at that battle pose.  Sit by the fire really likes hummus for you have cat to be kitten me 
-            right meow miaow then turn around and show you my bum, or cough hairball, eat toilet paper but gnaw the corn cob, and demand 
-            to be let outside at once, and expect owner to wait for me as i think about it. Give me some of your food give me some of 
-            your food give me some of your food meh, i don't want it lick sellotape or the cat was chasing the mouse, so always ensure 
-            to lay down in such a manner that tail can lightly brush human's nose yet need to check on human, have not seen in an hour 
-            might be dead oh look, human is alive, hiss at human, feed me purr hack. Spend six hours per day washing, but still have a 
-            crusty butthole. Cuddle no cuddle cuddle love scratch scratch chew iPad power cord, for have secret plans but pushes butt to 
-            face, loved it, hated it, loved it, hated it scratch the postman wake up lick paw wake up owner meow meow. Eat from dog's food 
-            find something else more interesting, so more napping, more napping all the napping is exhausting pushes butt to face yet cat 
-            meoooow i iz master of hoomaan, not hoomaan master of i, oooh damn dat dog or knock dish off table head butt cant eat out of 
-            my own dish. Use lap as chair purr. Good morning sunshine lick master's hand at first then bite because im moody so licks your 
-            face attack dog, run away and pretend to be victim. Gimme attention gimme attention gimme attention gimme attention gimme 
-            attention gimme attention just kidding i don't want it anymore meow bye i bet my nine lives on you-oooo-ooo-hooo love or wake 
-            up human for food at 4am and ask for petting. Headbutt owner's knee lick master's hand at first then bite because im moody, 
-            i will be pet i will be pet and then i will hiss yet flop over. Run up and down stairs. Grass smells good murr i hate humans 
-            they are so annoying. Somehow manage to catch a bird but have no idea what to do next, so play with it until it dies of shock 
-            eat an easter feather as if it were a bird then burp victoriously, but tender i'm bored inside, let me out i'm lonely outside, 
-            let me in i can't make up my mind whether to go in or out, guess i'll just stand partway in and partway out, contemplating 
-            the universe for half an hour how dare you nudge me with your foot?!?! leap into the air in greatest offense! hiding behind 
-            the couch until lured out by a feathery toy i shall purr myself to sleep or catto munch salmono soft kitty warm kitty little 
-            ball of furr. Cuddle no cuddle cuddle love scratch scratch. Sit by the fire is good you understand your place in my world 
-            lick butt and make a weird face cat jumps and falls onto the couch purrs and wakes up in a new dimension filled with kitty 
-            litter meow meow yummy there is a bunch of cats hanging around eating catnip , so suddenly go on wild-eyed crazy rampage. 
-            Find something else more interesting cat slap dog in face suddenly go on wild-eyed crazy rampage find empty spot in cupboard
-             and sleep all day, and hate dog. Purrr purr littel cat, little cat purr purr purr so i will ruin the couch with my claws.
+            Rumbles is so fierce. Look at that battle pose. Sit by the fire
+            really likes hummus for you have cat to be kitten me
+            right meow miaow then turn around and show you my bum, or cough
+            hairball, eat toilet paper but gnaw the corn cob, and demand
+            to be let outside at once, and expect owner to wait for me as i
+            think about it. Give me some of your food give me some of
+            your food give me some of your food meh, i don't want it lick
+            sellotape or the cat was chasing the mouse, so always ensure
+            to lay down in such a manner that tail can lightly brush human's
+            nose yet need to check on human, have not seen in an hour
+            might be dead oh look, human is alive, hiss at human, feed me purr
+            hack. Spend six hours per day washing, but still have a
+            crusty butthole. Cuddle no cuddle cuddle love scratch scratch chew
+            iPad power cord, for have secret plans but pushes butt to
+            face, loved it, hated it, loved it, hated it scratch the postman
+            wake up lick paw wake up owner meow meow. Eat from dog's food
+            find something else more interesting, so more napping, more napping
+            all the napping is exhausting pushes butt to face yet cat
+            meoooow i iz master of hoomaan, not hoomaan master of i, oooh damn
+            dat dog or knock dish off table head butt cant eat out of
+            my own dish. Use lap as chair purr. Good morning sunshine lick
+            master's hand at first then bite because im moody so licks your
+            face attack dog, run away and pretend to be victim. Gimme attention
+            gimme attention gimme attention gimme attention gimme
+            attention gimme attention just kidding i don't want it anymore meow
+            bye i bet my nine lives on you-oooo-ooo-hooo love or wake
+            up human for food at 4am and ask for petting. Headbutt owner's knee
+            lick master's hand at first then bite because im moody,
+            i will be pet i will be pet and then i will hiss yet flop over. Run
+            up and down stairs. Grass smells good murr i hate humans
+            they are so annoying. Somehow manage to catch a bird but have no
+            idea what to do next, so play with it until it dies of shock
+            eat an easter feather as if it were a bird then burp victoriously,
+            but tender i'm bored inside, let me out i'm lonely outside,
+            let me in i can't make up my mind whether to go in or out, guess
+            i'll just stand partway in and partway out, contemplating
+            the universe for half an hour how dare you nudge me with your
+            foot?!?! leap into the air in greatest offense! hiding behind
+            the couch until lured out by a feathery toy i shall purr myself to
+            sleep or catto munch salmono soft kitty warm kitty little
+            ball of furr. Cuddle no cuddle cuddle love scratch scratch. Sit by
+            the fire is good you understand your place in my world
+            lick butt and make a weird face cat jumps and falls onto the couch
+            purrs and wakes up in a new dimension filled with kitty
+            litter meow meow yummy there is a bunch of cats hanging around
+            eating catnip , so suddenly go on wild-eyed crazy rampage.
+            Find something else more interesting cat slap dog in face suddenly
+            go on wild-eyed crazy rampage find empty spot in cupboard
+            and sleep all day, and hate dog. Purrr purr littel cat, little cat
+            purr purr purr so i will ruin the couch with my claws.
           </h2>
         </div>
       </div>
