--- a/index.html
+++ b/index.html
@@ -2,27 +2,28 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta content="width=device-width, initial-scale=1, maximum-scale=1" name="viewport"/>
+    <meta content="width=device-width, initial-scale=1, maximum-scale=1"
+      name="viewport" />
     <title>
-        Hiltz Blog Site
+      Hiltz Blog Site
     </title>
     <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
-    <div class = "container">
+    <div class="container">
       <div class="header">
         <h1>
           Hiltz Kitty Blog
         </h1>
       </div>
       <div class="nav-container">
-          <a class="nav-content" href="index.html">Home</a>
-          <a class="nav-content" href="nav/about.html">Author Info</a>
-          <a class="nav-content" href="nav/contact.html">Contact</a>
+        <a class="nav-content" href="index.html">Home</a>
+        <a class="nav-content" href="nav/about.html">Author Info</a>
+        <a class="nav-content" href="nav/contact.html">Contact</a>
       </div>
       <div class="blog-preview-grid">
         <!-- blog 1 -->
-        <div class="blog-flex-preview box" >
+        <div class="blog-flex-preview box">
           <img src="images/Both1.jpg" alt="Daryl and Rumbles" class="blog-pic">
           <p class="blog-pic-text">
             Best buds
@@ -32,7 +33,7 @@
           </a>
         </div>
         <!-- blog 2 -->
-        <div class="blog-flex-preview box" >
+        <div class="blog-flex-preview box">
           <img src="images/Rumbles1.jpg" alt="Rumbles" class="blog-pic">
           <p class="blog-pic-text">
             So fierce
@@ -42,7 +43,7 @@
           </a>
         </div>
         <!-- blog 3 -->
-        <div class="blog-flex-preview box" >
+        <div class="blog-flex-preview box">
           <img src="images/Daryl1.jpg" alt="Daryl" class="blog-pic">
           <p class="blog-pic-text">
             Daryl is confused
@@ -52,7 +53,7 @@
           </a>
         </div>
         <!-- blog 4 -->
-        <div class="blog-flex-preview box" >
+        <div class="blog-flex-preview box">
           <img src="images/Both2.jpg" alt="Daryl and Rumbles" class="blog-pic">
           <p class="blog-pic-text">
             Daryl protecting Rumbles
@@ -62,7 +63,7 @@
           </a>
         </div>
         <!-- blog 5 -->
-        <div class="blog-flex-preview box" >
+        <div class="blog-flex-preview box">
           <img src="images/Rumbles2.jpg" alt="Rumbles" class="blog-pic">
           <p class="blog-pic-text">
             Scary Rumbles
@@ -72,7 +73,7 @@
           </a>
         </div>
         <!-- blog 6 -->
-        <div class="blog-flex-preview box" >
+        <div class="blog-flex-preview box">
           <img src="images/Daryl2.jpg" alt="Daryl" class="blog-pic">
           <p class="blog-pic-text">
             Pst... Here's a blep for ya
@@ -82,7 +83,7 @@
           </a>
         </div>
         <!-- blog 7 -->
-        <div class="blog-flex-preview box" >
+        <div class="blog-flex-preview box">
           <img src="images/Both3.jpg" alt="Daryl and Rumbles" class="blog-pic">
           <p class="blog-pic-text">
             Protectors of the realm
@@ -92,7 +93,7 @@
           </a>
         </div>
         <!-- blog 8 -->
-        <div class="blog-flex-preview box" >
+        <div class="blog-flex-preview box">
           <img src="images/Rumbles3.jpg" alt="Rumbles" class="blog-pic">
           <p class="blog-pic-text">
             Lookin sharp Rumbles
@@ -102,7 +103,7 @@
           </a>
         </div>
         <!-- blog 9 -->
-        <div class="blog-flex-preview box" >
+        <div class="blog-flex-preview box">
           <img src="images/Daryl3.jpg" alt="Daryl" class="blog-pic">
           <p class="blog-pic-text">
             Daryl is such a proud kitty
