--- a/nav/about.html
+++ b/nav/about.html
@@ -2,32 +2,35 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta content="width=device-width, initial-scale=1, maximum-scale=1" name="viewport"/>
+    <meta content="width=device-width, initial-scale=1, maximum-scale=1"
+      name="viewport" />
     <title>
-        Blog 1
+      Blog 1
     </title>
     <link href="../css/style.css" rel="stylesheet">
   </head>
   <body>
-    <div class = "container">
+    <div class="container">
       <div class="header">
         <h1>
           Hiltz Kitty Blog
         </h1>
       </div>
       <div class="nav-container">
-          <a class="nav-content" href="../index.html">Home</a>
-          <a class="nav-content" href="../nav/about.html">Author Info</a>
-          <a class="nav-content" href="../nav/contact.html">Contact</a>
-          <a class="nav-content" href="#">Facebook</a>
-          <a class="nav-content" href="#">Twitter</a>
-          <a class="nav-content" href="#">LinkedIn</a>
+        <a class="nav-content" href="../index.html">Home</a>
+        <a class="nav-content" href="../nav/about.html">Author Info</a>
+        <a class="nav-content" href="../nav/contact.html">Contact</a>
+        <a class="nav-content" href="#">Facebook</a>
+        <a class="nav-content" href="#">Twitter</a>
+        <a class="nav-content" href="#">LinkedIn</a>
       </div>
       <div class="blog-grid">
-        <div class="blog-flex box" >
-          <img src="../images/Author.jpg" alt="The blog author" class="blog-pic">
+        <div class="blog-flex box">
+          <img src="../images/Author.jpg" alt="The blog author"
+            class="blog-pic">
           <h2 class="blog-text">
-            Here's the author running the Cooper River Bridge run with a chimichanga in his mouth
+            Here's the author running the Cooper River Bridge run with a
+            chimichanga in his mouth
           </h2>
         </div>
       </div>
