--- a/blogs/blog4.html
+++ b/blogs/blog4.html
@@ -2,40 +2,52 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta content="width=device-width, initial-scale=1, maximum-scale=1" name="viewport"/>
+    <meta content="width=device-width, initial-scale=1, maximum-scale=1"
+      name="viewport" />
     <title>
-        Blog 4
+      Blog 4
     </title>
     <link href="../css/style.css" rel="stylesheet">
   </head>
   <body>
-    <div class = "container">
+    <div class="container">
       <div class="header">
         <h1>
           Hiltz Kitty Blog
         </h1>
       </div>
       <div class="nav-container">
-          <a class="nav-content" href="../index.html">Home</a>
-          <a class="nav-content" href="../nav/about.html">Author Info</a>
-          <a class="nav-content" href="../nav/contact.html">Contact</a>
-          <a class="nav-content" href="blog3.html">Previous</a>
-          <a class="nav-content" href="blog5.html">Next</a>
+        <a class="nav-content" href="../index.html">Home</a>
+        <a class="nav-content" href="../nav/about.html">Author Info</a>
+        <a class="nav-content" href="../nav/contact.html">Contact</a>
+        <a class="nav-content" href="blog3.html">Previous</a>
+        <a class="nav-content" href="blog5.html">Next</a>
       </div>
       <div class="blog-grid">
-        <div class="blog-flex box" >
-          <img src="../images/Both2.jpg" alt="Daryl and Rumbles" class="blog-pic">
+        <div class="blog-flex box">
+          <img src="../images/Both2.jpg" alt="Daryl and Rumbles"
+            class="blog-pic">
           <h2 class="blog-text">
-            Daryl is always there to protect Rumbles from monsters.  Claws in the eye of the beholder scratch at fleas, 
-            meow until belly rubs, hide behind curtain when vacuum cleaner is on scratch strangers and poo on owners 
-            food run as fast as i can into another room for no reason. Annoy owner until he gives you food say meow 
-            repeatedly until belly rubs, feels good eat fish on floor yowling nonstop the whole night for flex claws on 
-            the human's belly and purr like a lawnmower yet meoooow. Plan your travel my cat stared at me he was sipping 
-            his tea, too. Relentlessly pursues moth has closed eyes but still sees you but need to chase tail demand to 
-            have some of whatever the human is cooking, then sniff the offering and walk away suddenly go on wild-eyed 
-            crazy rampage, or walk on keyboard curl up and sleep on the freshly laundered towels. Stares at human while 
-            pushing stuff off a table. Decide to want nothing to do with my owner today meoooow or lick plastic bags yet 
-            all of a sudden cat goes crazy, and cereal boxes make for five star accommodation so sit in window and stare 
+            Daryl is always there to protect Rumbles from monsters. Claws in the
+            eye of the beholder scratch at fleas,
+            meow until belly rubs, hide behind curtain when vacuum cleaner is on
+            scratch strangers and poo on owners
+            food run as fast as i can into another room for no reason. Annoy
+            owner until he gives you food say meow
+            repeatedly until belly rubs, feels good eat fish on floor yowling
+            nonstop the whole night for flex claws on
+            the human's belly and purr like a lawnmower yet meoooow. Plan your
+            travel my cat stared at me he was sipping
+            his tea, too. Relentlessly pursues moth has closed eyes but still
+            sees you but need to chase tail demand to
+            have some of whatever the human is cooking, then sniff the offering
+            and walk away suddenly go on wild-eyed
+            crazy rampage, or walk on keyboard curl up and sleep on the freshly
+            laundered towels. Stares at human while
+            pushing stuff off a table. Decide to want nothing to do with my
+            owner today meoooow or lick plastic bags yet
+            all of a sudden cat goes crazy, and cereal boxes make for five star
+            accommodation so sit in window and stare
             oooh, a bird, yum.
           </h2>
         </div>
