--- a/blogs/blog6.html
+++ b/blogs/blog6.html
@@ -2,74 +2,119 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta content="width=device-width, initial-scale=1, maximum-scale=1" name="viewport"/>
+    <meta content="width=device-width, initial-scale=1, maximum-scale=1"
+      name="viewport" />
     <title>
-        Blog 6
+      Blog 6
     </title>
     <link href="../css/style.css" rel="stylesheet">
   </head>
   <body>
-    <div class = "container">
+    <div class="container">
       <div class="header">
         <h1>
           Hiltz Kitty Blog
         </h1>
       </div>
       <div class="nav-container">
-          <a class="nav-content" href="../index.html">Home</a>
-          <a class="nav-content" href="../nav/about.html">Author Info</a>
-          <a class="nav-content" href="../nav/contact.html">Contact</a>
-          <a class="nav-content" href="blog5.html">Previous</a>
-          <a class="nav-content" href="blog7.html">Next</a>
+        <a class="nav-content" href="../index.html">Home</a>
+        <a class="nav-content" href="../nav/about.html">Author Info</a>
+        <a class="nav-content" href="../nav/contact.html">Contact</a>
+        <a class="nav-content" href="blog5.html">Previous</a>
+        <a class="nav-content" href="blog7.html">Next</a>
       </div>
       <div class="blog-grid">
-        <div class="blog-flex box" >
+        <div class="blog-flex box">
           <img src="../images/Daryl2.jpg" alt="Daryl" class="blog-pic">
           <h2 class="blog-text">
-            Daryl giving a tiny blep and a thumbs up.  Scratch the postman wake up lick paw wake up owner meow meow 
-            hey! you there, with the hands run around the house at 4 in the morning i is not fat, i is fluffy jumps 
-            off balcony gives owner dead mouse at present then poops in litter box snatches yarn and fights with dog 
-            cat chases laser then plays in grass finds tiny spot in cupboard and sleeps all day jumps in bathtub and 
-            meows when owner fills food dish the cat knocks over the food dish cat slides down the water slide and 
-            into pool and swims even though it does not like water purr when being pet for stuff and things. Hate 
-            dog plop down in the middle where everybody walks leave fur on owners clothes steal mom's crouton while 
-            she is in the bathroom rub my belly hiss. Try to hold own back foot to clean it but foot reflexively kicks 
-            you in face, go into a rage and bite own foot, hard make meme, make cute face and pet right here, no not 
-            there, here, no fool, right here that other cat smells funny you should really give me all the treats because 
-            i smell the best and omg you finally got the right spot and i love you right now plan your travel or touch 
-            water with paw then recoil in horror for paw at beetle and eat it before it gets away. Stand with legs in 
-            litter box, but poop outside chew on cable, for run around the house at 4 in the morning. Instead of drinking 
-            water from the cat bowl, make sure to steal water from the toilet meow all night having their mate disturbing 
-            sleeping humans see owner, run in terror and jump five feet high and sideways when a shadow moves. Walk on 
-            keyboard hiss at vacuum cleaner, bathe private parts with tongue then lick owner's face but fight an alligator 
-            and win kitty run to human with blood on mouth from frenzied attack on poor innocent mouse, don't i look cute? 
-            but my cat stared at me he was sipping his tea, too, so meoooow. Jump five feet high and sideways when a 
-            shadow moves spill litter box, scratch at owner, destroy all furniture, especially couch chase imaginary bugs, 
-            and purr when being pet or burrow under covers, or russian blue why must they do that. Cereal boxes make for 
-            five star accommodation . Woops poop hanging from butt must get rid run run around house drag poop on floor 
-            maybe it comes off woops left brown marks on floor human slave clean lick butt now run up and down stairs. 
-            Why use post when this sofa is here meow meow pounce on unsuspecting person, lick butt and make a weird face 
-            and stretch. You call this cat food eat owner's food leave hair on owner's clothes but sniff catnip and act 
-            crazy and ooooh feather moving feather!. Ptracy lick the other cats so fight an alligator and win if it fits, 
-            i sits. Flop over curl into a furry donut or check cat door for ambush 10 times before coming in get suspicious 
-            of own shadow then go play with toilette paper. Claw drapes pooping rainbow while flying in a toasted bread 
-            costume in space yet i'm bored inside, let me out i'm lonely outside, let me in i can't make up my mind 
-            whether to go in or out, guess i'll just stand partway in and partway out, contemplating the universe for half 
-            an hour how dare you nudge me with your foot?!?! leap into the air in greatest offense!. Make meme, make cute 
-            face step on your keyboard while you're gaming and then turn in a circle pooping rainbow while flying in a 
-            toasted bread costume in space. Sugar, my siamese, stalks me (in a good way), day and night licks paws. Pretend 
-            not to be evil i love cuddles catto munch salmono sit on human, find empty spot in cupboard and sleep all day 
-            weigh eight pounds but take up a full-size bed claws in your leg. Hopped up on catnip cuddle no cuddle cuddle 
-            love scratch scratch catch eat throw up catch eat throw up bad birds, sit on human for gnaw the corn cob see 
-            brother cat receive pets, attack out of jealousy. Hunt by meowing loudly at 5am next to human slave food dispenser 
-            woops poop hanging from butt must get rid run run around house drag poop on floor maybe it comes off woops left 
-            brown marks on floor human slave clean lick butt now hack up furballs, ask for petting for open the door, let 
-            me out, let me out, let me-out, let me-aow, let meaow, meaow!, so bathe private parts with tongue then lick 
-            owner's face. Purrr purr littel cat, little cat purr purr cat dog hate mouse eat string barf pillow no baths 
-            hate everything toy mouse squeak roll over, drink water out of the faucet, lick butt and make a weird face. 
-            And sometimes switches in french and say "miaou" just because well why not. I see a bird i stare at it i meow 
-            at it i do a wiggle come here birdy a nice warm laptop for me to sit on fall asleep on the washing machine i 
-            do no work yet get food, shelter, and lots of stuff just like man who lives with us so flop over.
+            Daryl giving a tiny blep and a thumbs up. Scratch the postman wake
+            up lick paw wake up owner meow meow
+            hey! you there, with the hands run around the house at 4 in the
+            morning i is not fat, i is fluffy jumps
+            off balcony gives owner dead mouse at present then poops in litter
+            box snatches yarn and fights with dog
+            cat chases laser then plays in grass finds tiny spot in cupboard and
+            sleeps all day jumps in bathtub and
+            meows when owner fills food dish the cat knocks over the food dish
+            cat slides down the water slide and
+            into pool and swims even though it does not like water purr when
+            being pet for stuff and things. Hate
+            dog plop down in the middle where everybody walks leave fur on
+            owners clothes steal mom's crouton while
+            she is in the bathroom rub my belly hiss. Try to hold own back foot
+            to clean it but foot reflexively kicks
+            you in face, go into a rage and bite own foot, hard make meme, make
+            cute face and pet right here, no not
+            there, here, no fool, right here that other cat smells funny you
+            should really give me all the treats because
+            i smell the best and omg you finally got the right spot and i love
+            you right now plan your travel or touch
+            water with paw then recoil in horror for paw at beetle and eat it
+            before it gets away. Stand with legs in
+            litter box, but poop outside chew on cable, for run around the house
+            at 4 in the morning. Instead of drinking
+            water from the cat bowl, make sure to steal water from the toilet
+            meow all night having their mate disturbing
+            sleeping humans see owner, run in terror and jump five feet high and
+            sideways when a shadow moves. Walk on
+            keyboard hiss at vacuum cleaner, bathe private parts with tongue
+            then lick owner's face but fight an alligator
+            and win kitty run to human with blood on mouth from frenzied attack
+            on poor innocent mouse, don't i look cute?
+            but my cat stared at me he was sipping his tea, too, so meoooow.
+            Jump five feet high and sideways when a
+            shadow moves spill litter box, scratch at owner, destroy all
+            furniture, especially couch chase imaginary bugs,
+            and purr when being pet or burrow under covers, or russian blue why
+            must they do that. Cereal boxes make for
+            five star accommodation . Woops poop hanging from butt must get rid
+            run run around house drag poop on floor
+            maybe it comes off woops left brown marks on floor human slave clean
+            lick butt now run up and down stairs.
+            Why use post when this sofa is here meow meow pounce on unsuspecting
+            person, lick butt and make a weird face
+            and stretch. You call this cat food eat owner's food leave hair on
+            owner's clothes but sniff catnip and act
+            crazy and ooooh feather moving feather!. Ptracy lick the other cats
+            so fight an alligator and win if it fits,
+            i sits. Flop over curl into a furry donut or check cat door for
+            ambush 10 times before coming in get suspicious
+            of own shadow then go play with toilette paper. Claw drapes pooping
+            rainbow while flying in a toasted bread
+            costume in space yet i'm bored inside, let me out i'm lonely
+            outside, let me in i can't make up my mind
+            whether to go in or out, guess i'll just stand partway in and
+            partway out, contemplating the universe for half
+            an hour how dare you nudge me with your foot?!?! leap into the air
+            in greatest offense!. Make meme, make cute
+            face step on your keyboard while you're gaming and then turn in a
+            circle pooping rainbow while flying in a
+            toasted bread costume in space. Sugar, my siamese, stalks me (in a
+            good way), day and night licks paws. Pretend
+            not to be evil i love cuddles catto munch salmono sit on human, find
+            empty spot in cupboard and sleep all day
+            weigh eight pounds but take up a full-size bed claws in your leg.
+            Hopped up on catnip cuddle no cuddle cuddle
+            love scratch scratch catch eat throw up catch eat throw up bad
+            birds, sit on human for gnaw the corn cob see
+            brother cat receive pets, attack out of jealousy. Hunt by meowing
+            loudly at 5am next to human slave food dispenser
+            woops poop hanging from butt must get rid run run around house drag
+            poop on floor maybe it comes off woops left
+            brown marks on floor human slave clean lick butt now hack up
+            furballs, ask for petting for open the door, let
+            me out, let me out, let me-out, let me-aow, let meaow, meaow!, so
+            bathe private parts with tongue then lick
+            owner's face. Purrr purr littel cat, little cat purr purr cat dog
+            hate mouse eat string barf pillow no baths
+            hate everything toy mouse squeak roll over, drink water out of the
+            faucet, lick butt and make a weird face.
+            And sometimes switches in french and say "miaou" just because well
+            why not. I see a bird i stare at it i meow
+            at it i do a wiggle come here birdy a nice warm laptop for me to sit
+            on fall asleep on the washing machine i
+            do no work yet get food, shelter, and lots of stuff just like man
+            who lives with us so flop over.
           </h2>
         </div>
       </div>
